# note-sharing-d-app

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html
src/: main.rs
