[package]
name = "note-share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

wasm-bindgen-futures = "0.4"

markdown = "1.0.0-alpha.8"

yew.version = "0.20.0"

yew.features = ["csr"] 

chrono = {version = "0.4.24", features = ["serde"]}
anyhow = "1.0.70"

web-sys = {version="0.3.61"}
wasm-bindgen = "0.2.84"
regex = "1.8.1"
