[package]
name = "note-share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.8"

regex = "1.8.1"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

yew = {version = "0.20.0", features = ["csr"]}

gloo-net = "0.2"
gloo = "0.8.0"
wasm-bindgen-futures = "0.4"
web-sys = {version="0.3.61", features=["HtmlButtonElement", "CssStyleDeclaration"]}
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
log = "0.4.17"

# chrono = {version = "0.4.24", features = ["serde"]}
